[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/Checklist/Doc.gd" type="Script" id=1]
[ext_resource path="res://addons/Checklist/icons/CheckBox.svg" type="Texture" id=2]
[ext_resource path="res://addons/Checklist/icons/Save.svg" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "fade away"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("TabContainer/Changelog/HBoxContainer/Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Doc" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -678.0
rect_min_size = Vector2( 0, 200 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
margin_right = 1024.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0

[node name="Checklist" type="ScrollContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="cont" type="VBoxContainer" parent="TabContainer/Checklist"]
margin_right = 1016.0
margin_bottom = 164.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="btns" type="HBoxContainer" parent="TabContainer/Checklist/cont"]
margin_right = 1016.0
margin_bottom = 22.0

[node name="uncheckbtn" type="Button" parent="TabContainer/Checklist/cont/btns"]
margin_right = 102.0
margin_bottom = 22.0
size_flags_horizontal = 0
text = "uncheck all"
icon = ExtResource( 2 )

[node name="OptionButton" type="OptionButton" parent="TabContainer/Checklist/cont/btns"]
margin_left = 106.0
margin_right = 135.0
margin_bottom = 22.0
selected = 0

[node name="Changelog" type="VBoxContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Changelog"]
margin_right = 1912.0
margin_bottom = 18.0

[node name="savebtn" type="Button" parent="TabContainer/Changelog/HBoxContainer"]
margin_right = 57.0
margin_bottom = 18.0
size_flags_horizontal = 0
text = "save"
icon = ExtResource( 3 )

[node name="Label" type="Label" parent="TabContainer/Changelog/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 61.0
margin_top = 2.0
margin_right = 110.0
margin_bottom = 16.0
text = "saved..."

[node name="edit" type="TextEdit" parent="TabContainer/Changelog"]
margin_top = 22.0
margin_right = 1912.0
margin_bottom = 366.0
size_flags_horizontal = 3
size_flags_vertical = 3
highlight_current_line = true
show_line_numbers = true
fold_gutter = true
hiding_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/fade away" = SubResource( 1 )

[connection signal="pressed" from="TabContainer/Checklist/cont/btns/uncheckbtn" to="." method="uncheck_checklist"]
[connection signal="pressed" from="TabContainer/Checklist/cont/btns/OptionButton" to="." method="_on_OptionButton_pressed"]
[connection signal="pressed" from="TabContainer/Changelog/HBoxContainer/savebtn" to="." method="save_changelog"]
